//***************
//Version History
//***************
[4.9.11]
+ Googlebar Lite context menu items can now be middle clicked to open in a new tab
+ Changed a few of the default context menu display settings
+ Bumped the minVersion to 24.0
+ Bumped the maxVersion to 45.*

--

[4.9.10]
+ Simplified a number of service calls using the Services JavaScript module
+ Bug Fix: Word search buttons should now work properly in Firefox 25.0

--

[4.9.9]
+ Bug Fix: The dictionary search feature should work properly again
+ Bug Fix: Corrected a minor Javascript variable declaration issue
+ Bug Fix: Corrected a styling issue with highlighted search terms

--

[4.9.8]
+ Search terms entered into private browsing windows are no longer saved to the search history
+ The minimum supported Firefox version has been changed to 17.0
+ Bumped the maxVersion to 30.*
+ Removed all private browsing detection and observation logic, since those interfaces have been deprecated
+ Removed the one and only reference to the nsiPrefBranch2 interface, since it has been deprecated
+ Bug Fix: The video search option should no longer result in a 404 page not found error
+ Bug Fix: Logical operators (AND / OR) should no longer be highlighted when search term highlighting is enabled
+ Bug Fix: Open and close parentheses are now filtered out from search terms

--

[4.9.7]
+ Various internal code improvements
+ Bug Fix: Disabling the "Remember last combined-menu search type" option will now reset the combined search button properly
+ Bug Fix: Doing a news search when no search terms are present will now take you to the Google News homepage as intended

--

[4.9.6]
+ Bug Fix: The news search type should no longer result in a "page not found" error
+ Bug Fix: Dragging a link to the search box no longer pastes the URL, but the link text instead

--

[4.9.5]
+ Bug Fix: Corrected a problem that prevented the "Paste and Search" option from appearing in the search box context menu

--

[4.9.4]