@@ -18,7 +18,7 @@
 <vbox>
 	<vbox align="center" flex="1">
 		<label id="GBL-About-Name" crop="right" value="&gblite.name;"/>
-		<label id="GBL-About-Version" crop="right" value="Version 4.9.10"/>
+		<label id="GBL-About-Version" crop="right" value="Version 4.9.11"/>
 	</vbox>
 	
 	<groupbox>
