@@ -13,7 +13,7 @@
 	<em:name>Googlebar Lite</em:name>
 	<em:optionsURL>chrome://googlebarlite/content/prefs.xul</em:optionsURL>
 	<em:type>2</em:type>
-	<em:version>4.9.10</em:version>
+	<em:version>4.9.11</em:version>
 
 	<em:updateURL>http://www.borngeek.com/downloads/update.rdf</em:updateURL>
 	
@@ -25,8 +25,8 @@
 	<em:targetApplication>
 		<Description>
 			<em:id>{ec8030f7-c20a-464f-9b0e-13a3a9e97384}</em:id>
-			<em:minVersion>17.0</em:minVersion>
-			<em:maxVersion>30.*</em:maxVersion>
+			<em:minVersion>24.0</em:minVersion>
+			<em:maxVersion>45.*</em:maxVersion>
 		</Description>
 	</em:targetApplication>
 	
